# AI-Knowledge-Agent

./: .gitignore  LICENSE.txt  README.md  app.py  config.example  documentIngenstion.py  hello.py  interface.py  prompt.py  pyproject.toml  requirements.txt  todo.md  todo2.md
.cursor/rules/: coding-rules.mdc
ai_agent/core/: module.py
app/: main.py
app/tailwind/: package-lock.json  package.json  tailwind.config.js
app/templates/: base.html  index.html
application/: main.py
application/templates /: base.html
archive/: documentIngenstion.py
archived_code/ai_agent/: __init__.py
archived_code/data/: document_db.db
core/: Document.py  VectorDataBase.py  chroma_utils.py  document_utils.py  entry_point.py  environment_setup.py  extract-log.txt  main.py  rag_engine.py  rag_engine_2.py
core/agents/: agent.py  agent2.py  basicAgent.py  document_agent.py  output_formats.py  planning_agent.py  tools.py
core/config/: config.py
core/document/: document.py
core/prompts/: document_prompts.py  prompt.py  user_prompt.py
core/utils/: chroma_utils.py  document_utils.py
core/vector_store/: graph_db.py  vector_db.py
data/: CS_Jobs.xlsx
databases/sql_lite/: document_db.db
logging/: extract-error-log.txt  extract-log.txt
src/: __init__.py  agents.py  chroma_utils.py  document_utils.py  entry_point.py  prompt.py  rag_engine.py
src/Agents/: planning_agent.py
src/ai_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: document_db.db
src/knowledge_agent/: __init__.py
src/prompts/: document_prompts.py
tests/: test_document_builder.py
(+99 files in other folders)
