[tool.poetry]
name = "star"
version = "0.1.0"
description = "AI document writing tool"
authors = ["MawuliAgamah <64679996+MawuliAgamah@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
