[project]
name = "ai_module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This tells Python where to find your package
[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]