[project]
name = "aimodule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'langchain_openai',
    'langchain-ollama',
    'langchain-community',
    'langchain',
    'gensim',
    'nltk',
    'llama_index',
    'llama-index-vector-stores-chroma',
    'unstructured[md]',
    'chromadb',
    'onnxruntime==1.15.0',
    "multiprocess>=0.70.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]  # This points to your actual package directory


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("src")'
